# ttw

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  config-private.example.json  config.example.json  flake.nix
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: serv2.yml  taglogic-test.yml  taglogic.yml  taxlogic-test.yml  web-build.yml
docs/: api.md  beem.md  boolean.md  config.md  run-server.md  user-limits.md
graphgen/: index.js
misc/loader/: README.md
serv2/: .gitignore  beem.js  emptyUserDb.sql  genAggStats.js  genVapidKeys.js  index.js  initAuthDb.sql  initGlobalDb.sql  initUserDb.sql  package.json  pushHandler.js  run.sh  setCorsHeaders.js  uservacuum.sh  validate.js  watch.sh
serv2/forms/: changepw.html  forms.js  gentoken.html  login.html  register.html  style.css
serv2/static/: normalizePath.js  static.js
serv2/tests/: accs.js  loggedout.js  normalizePath.js  pings.js  (+1 more)
taglogic/: Cargo.toml
taglogic/src/: bool.rs  exprand_100k.txt  gaps_100k.txt  hash.rs  lcg_100k.txt  lib.rs  tagtime_first_250.txt  tt.rs
web/: .gitignore  app.html  autoplay.ts  backend.ts  beem.ts  build.sh  date-utils.ts  debounce.ts  deploy.sh  download.ts  goals.ts  graphs.worker.ts  idle.ts  index.html  index.ts  init-db.ts  lite-index.ts  lite.html  onSecond.ts  package.json  pingFilter.ts  pings.ts  pint-update.ts  push.ts  register-sw.ts  strings.ts  sw.js  sync.ts  tagColor.ts  tagIndex.ts  taglogic.ts  tips.ts  todos.ts  tsconfig.json  urlBase64ToUint8Array.ts  webpack.config.js  xxhash.ts
(+44 files in other folders)
